tests/read_only_object/read_only_object.exp
Error ------------------------------------------------------------------------------------------------------ test.js:6:1

Cannot assign `42` to `obj.p` because property `p` is not writable.

   6| obj.p = 42; // Should error!
      ^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:14:1

Cannot assign `42` to `multiKeyObj.p` because property `p` is not writable.

   14| multiKeyObj.p = 42; // Should error!
       ^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:15:1

Cannot assign `42` to `multiKeyObj.q` because property `q` is not writable.

   15| multiKeyObj.q = 42; // Should error!
       ^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:22:3

Cannot assign `42` to `unionObj.p` because property `p` is not writable.

   22|   unionObj.p = 42; // Should error!
         ^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:24:4

Cannot get `unionObj.q` because property `q` is missing in object type [1].

   test.js:24:4
   24|   (unionObj.q: number); // Should error!
          ^^^^^^^^^^

References:
   test.js:20:33
   20| declare var unionObj: $ReadOnly<UnionObj>;
                                       ^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:26:3

Cannot assign `42` to `unionObj.p` because property `p` is not writable.

   26|   unionObj.p = 42; // Should error!
         ^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:27:3

Cannot assign `42` to `unionObj.q` because property `q` is not writable.

   27|   unionObj.q = 42; // Should error!
         ^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:36:3

Cannot assign `42` to `spreadUnionObj.p` because property `p` is not writable.

   36|   spreadUnionObj.p = 42; // Should error!
         ^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:37:3

Cannot assign `42` to `spreadUnionObj.z` because property `z` is not writable.

   37|   spreadUnionObj.z = 42; // Should error!
         ^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:40:4

Cannot get `spreadUnionObj.q` because property `q` is missing in object type [1].

   test.js:40:4
   40|   (spreadUnionObj.q: number); // Should error!
          ^^^^^^^^^^^^^^^^

References:
   test.js:34:39
   34| declare var spreadUnionObj: $ReadOnly<SpreadUnionObj>
                                             ^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:42:3

Cannot assign `42` to `spreadUnionObj.p` because property `p` is not writable.

   42|   spreadUnionObj.p = 42; // Should error!
         ^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:43:3

Cannot assign `42` to `spreadUnionObj.q` because property `q` is not writable.

   43|   spreadUnionObj.q = 42; // Should error!
         ^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:44:3

Cannot assign `42` to `spreadUnionObj.z` because property `z` is not writable.

   44|   spreadUnionObj.z = 42; // Should error!
         ^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:52:1

Cannot assign `42` to `intersectionObj.p` because property `p` is not writable.

   52| intersectionObj.p = 42; // Should error!
       ^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:53:1

Cannot assign `42` to `intersectionObj.q` because property `q` is not writable.

   53| intersectionObj.q = 42; // Should error!
       ^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:59:1

Cannot assign `42` to `indexerKeyObj.p` because property `p` is not writable.

   59| indexerKeyObj.p = 42; // Should error!
       ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:60:1

Cannot assign `true` to `indexerKeyObj.x` because property `x` is not writable.

   60| indexerKeyObj.x = true; // Should error!
       ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:66:1

Cannot assign `42` to `exactObj.p` because property `p` is not writable.

   66| exactObj.p = 42; // Should error!
       ^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:71:1

Cannot assign `42` to `spreadObj.p` because property `p` is not writable.

   71| spreadObj.p = 42; // Should error!
       ^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:76:1

Cannot assign `42` to `spreadExactObj.p` because property `p` is not writable.

   76| spreadExactObj.p = 42; // Should error!
       ^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:81:1

Cannot assign `42` to `objWithMethod.p` because property `p` is not writable.

   81| objWithMethod.p = 42; // Should error!
       ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:82:1

Cannot assign function to `objWithMethod.fn` because property `fn` is not writable.

   82| objWithMethod.fn = () => true; // Should error!
       ^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:90:1

Cannot assign `42` to `instance.p` because property `p` is not writable.

   90| instance.p = 42; // Should error!
       ^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:95:1

Cannot assign `42` to `writeOnlyObj.p` because property `p` is not writable.

   95| writeOnlyObj.p = 42; // Should error!
       ^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:99:20

Cannot instantiate `$ReadOnly` because number [1] is not an object.

   test.js:99:20
   99| type readOnlyNum = $ReadOnly<number>;
                          ^^^^^^^^^^^^^^^^^

References:
   test.js:99:30
   99| type readOnlyNum = $ReadOnly<number>;
                                    ^^^^^^ [1]



Found 25 errors
